// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info block snapshots: distance 1`] = `
<InfoBlock
  content="Total travel time: 3h 56m 11s"
  icon={[Function]}
/>
`;

exports[`Info block snapshots: generic 1`] = `
<Flex
  breakpointMods={
    Array [
      Object {
        "modifier": "space-items-sm",
      },
    ]
  }
>
  <FlexItem>
    <PlusIcon
      color="currentColor"
      noVerticalAlign={false}
      size="md"
      title={null}
    />
  </FlexItem>
  <FlexItem>
    test content
  </FlexItem>
</Flex>
`;

exports[`Info block snapshots: vehicles 1`] = `
<InfoBlock
  content="vehicles"
  icon={[Function]}
/>
`;

exports[`Info block snapshots: visits 1`] = `
<InfoBlock
  content="300 visits"
  icon={[Function]}
/>
`;
